fix: Fixed folder context menu issues with collapsed toolbar, b=no-bug, c=folders

--- a/src/zen/folders/zen-folders.css
+++ b/src/zen/folders/zen-folders.css
@@ -470,3 +470,9 @@ zen-folder {
 .tab-group-overflow-count-container {
   display: none !important;
 }
+
+:root:not([zen-sidebar-expanded]) {
+  & #context_zenFolderRename {
+    display: none !important;
+  }
+}
